# alarm-clock-cli

./: .gitignore  README.md  pyproject.toml
alarm_clock_cli/: __init__.py  cli.py  clock.py
alarm_clock_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_clock.py
