[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-clock-cli"
version = "0.1.0"
description = "A simple Python CLI alarm clock with persistent alarms."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Dibyendu Bar"}]

[project.scripts]
alarm-clock = "alarm_clock_cli.__main__:main"

[tool.setuptools]
packages = ["alarm_clock_cli"]

